USVM to UtBot adapters without contest hacks (#2710)
* Introduce `Tool.USVM` in `ContestEstimator`, implement `runUsvmGeneration` (#2666)

* Add `Tool.USVM` in `ContestEstimator`, implement `runUsvmGeneration`

* Remove redundant TODO

* Bump UtBot dependencies version to match USVM dependencies

* Use `UTestExecutionResult.trace` instead of `JcCoverage`

* Bump ksmt version to `0.5.13`

* Hacks similar to contest 2023 ones (#2676)

* Initial implementations of the adapter from JcExecution to UtExecution (#2677)

* Some awful attempts

* Initially implemented a converter of UTestInst to UtModel

* Refactor JcToUtModelConverter basing on UTestInst2UtModel converter

* Some steps to implement JcToUtExecutionConverter

* Implement minimalistic jc to ut execution conversion, enable codegen

* Some improvements

* DeepMapper for models is used

* Corrections

* Some improvements to JcToUtModelConverter

* Further improvements to JcToUtModelConverter

* Another converter little improvement

* Improve `UtExecutionFailure` creation

* Finish implementing `JcToUtModelConverter`

* Refactor nullability in `JcToUtModelConverter` and `JcToUtExecutionConverter`

* First version of JC to UT converters without overusing `Descriptor2ValueConverter`

* Processed forgotten call method expression

* Make conversion more class-friendly (do not fail if one method cause failure)

* Make it possible to use samples in ContestEstimator

* Tested on all primitives

* contrflow tests added

* More test classes added

* Add `build/output/test/samples` to `utbot-junit-contest` test projects

* Steps to avoid duplicating statements

* Make it working correct on IntExamples.max

* Remove OptimizeImportsProcessor (seems it was not called, but a source of bugs)

* Process UTestStaticMethodCall

* Comment out includes for IDE related projects in `settings.gradle.kts`

* Avoid using burningwave to export modules on Java 8

* Fix 